--- a/articles/menu-headings.ini
+++ b/articles/menu-headings.ini
@@ -1,13 +1,17 @@
 advanced-administrator=Administrateur avancé
 advanced-developer=Développeur avancé
+api-guides=Guides API
 cli-development=Développement CLI
 coding-examples=Exemples de codage
+core-contributions=Contributions essentielles
 database=Base de données
 developer-information=Informations pour les développeurs
 developing-an-mvc-component=Développement d'un composant MVC
 getting-started=Commencer
+ides=IDEs
 module-development=Développement de modules
 mvc-anatomy=Anatomie MVC
 mvc-examples=Exemples MVC
 plugin-development=Développement de plugins
+tips=Conseils
 unclassified=Non classé
