--- a/articles/menu-headings.ini
+++ b/articles/menu-headings.ini
@@ -1,5 +1,4 @@
 advanced-administrator=Administrateur avancé
-advanced-developer=Développeur avancé
 api-guides=Guides API
 cli-development=Développement CLI
 coding-examples=Exemples de codage
@@ -13,5 +12,6 @@ module-development=Développement de modules
 mvc-anatomy=Anatomie MVC
 mvc-examples=Exemples MVC
 plugin-development=Développement de plugins
+testing=Essai
 tips=Conseils
 unclassified=Non classé
