Updated developer headings.ini

--- a/articles/menu-headings.ini
+++ b/articles/menu-headings.ini
@@ -12,5 +12,6 @@ module-development=Développement de modules
 mvc-anatomy=Anatomie MVC
 mvc-examples=Exemples MVC
 plugin-development=Développement de plugins
+security=Sécurité
 testing=Essai
 tips=Conseils
